added names for testing

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <div class="clock">
       <div class="clock-face">
-        <div class="hand hour-hand"></div>
-        <div class="hand min-hand"></div>
-        <div class="hand second-hand"></div>
+        <div class="hand hour-hand">Hr</div>
+        <div class="hand min-hand">Min</div>
+        <div class="hand second-hand">Sec</div>
       </div>
     </div>
 </body>
